--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "1.6.0",
+    "@heroicons/react": "1.0.6",
     "@prisma/client": "3.13.0",
+    "autoprefixer": "10.x",
     "blitz": "0.45.4",
-    "react-dom": "18.0.0",
-    "react": "18.0.0",
-    "zod": "3.14.4",
+    "date-fns": "2.28.0",
     "final-form": "4.20.7",
-    "react-final-form": "6.5.9"
+    "postcss": "8.x",
+    "react": "18.0.0",
+    "react-datepicker": "4.7.0",
+    "react-dom": "18.0.0",
+    "react-final-form": "6.5.9",
+    "tailwindcss": "3.x",
+    "zod": "3.14.4"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -38,8 +45,8 @@
     "eslint": "7.32.0",
     "husky": "7.0.4",
     "lint-staged": "11.3.0-beta.2",
-    "prettier-plugin-prisma": "3.13.0",
     "prettier": "2.6.2",
+    "prettier-plugin-prisma": "3.13.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
     "prisma": "3.13.0",
