--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "@headlessui/react": "1.6.0",
     "@heroicons/react": "1.0.6",
     "@prisma/client": "3.13.0",
+    "@stripe/react-stripe-js": "1.7.2",
+    "@stripe/stripe-js": "1.29.0",
     "autoprefixer": "10.x",
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
     "postcss": "8.x",
     "react": "18.0.0",
+    "react-corner-ribbon": "0.0.5",
     "react-datepicker": "4.7.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.9",
+    "react-select": "5.3.1",
+    "stripe": "8.222.0",
     "tailwindcss": "3.x",
     "zod": "3.14.4"
   },
