--- a/package.json
+++ b/package.json
@@ -33,13 +33,21 @@
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
+    "passport-auth0": "1.4.2",
+    "passport-facebook": "3.0.0",
+    "passport-google-oauth2": "0.2.0",
+    "passport-google-oauth20": "2.0.0",
     "postcss": "8.x",
+    "qrcode.react": "3.0.1",
     "react": "18.0.0",
+    "react-burger-menu": "3.0.6",
     "react-corner-ribbon": "0.0.5",
     "react-datepicker": "4.7.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.9",
+    "react-pro-sidebar": "0.7.1",
     "react-select": "5.3.1",
+    "recharts": "2.1.9",
     "stripe": "8.222.0",
     "tailwindcss": "3.x",
     "zod": "3.14.4"
