--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "react-pro-sidebar": "0.7.1",
     "react-select": "5.3.1",
     "recharts": "2.1.9",
-    "stripe": "8.222.0",
+    "stripe": "9.4.0",
     "tailwindcss": "3.x",
+    "vercel": "24.2.4",
     "zod": "3.14.4"
   },
   "devDependencies": {
