--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "3.13.0",
     "@stripe/react-stripe-js": "1.7.2",
     "@stripe/stripe-js": "1.29.0",
+    "@uiball/loaders": "1.2.6",
     "autoprefixer": "10.x",
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
