--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
+    "framer-motion": "6.3.4",
     "passport-auth0": "1.4.2",
     "passport-facebook": "3.0.0",
     "passport-google-oauth2": "0.2.0",
