--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@headlessui/react": "1.6.0",
     "@heroicons/react": "1.0.6",
+    "@next-auth/prisma-adapter": "1.0.3",
     "@prisma/client": "3.13.0",
     "@stripe/react-stripe-js": "1.7.2",
     "@stripe/stripe-js": "1.29.0",
@@ -36,6 +37,7 @@
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
     "framer-motion": "6.3.4",
+    "next-auth": "4.3.4",
     "passport-auth0": "1.4.2",
     "passport-facebook": "3.0.0",
     "passport-google-oauth2": "0.2.0",
