--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "18.0.0",
     "react-final-form": "6.5.9",
     "react-hook-form": "7.32.1",
+    "react-hot-toast": "2.2.0",
     "react-pro-sidebar": "0.7.1",
     "react-select": "5.3.2",
     "recharts": "2.1.9",
