--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,282 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "jest.autoRun": "off"
+  "jest.autoRun": "off",
+  "cSpell.words": [
+    "accesa",
+    "accesează",
+    "acest",
+    "aceste",
+    "acestea",
+    "acestor",
+    "acestora",
+    "acestui",
+    "acord",
+    "acordul",
+    "acțiunile",
+    "Acum",
+    "adresa",
+    "Agrement",
+    "alegi",
+    "alte",
+    "altor",
+    "anumite",
+    "atât",
+    "atenție",
+    "având",
+    "avea",
+    "avem",
+    "Balta",
+    "baltazatun",
+    "baza",
+    "bazeaza",
+    "beneficiază",
+    "Brăilei",
+    "cadrul",
+    "caracter",
+    "catre",
+    "cauti",
+    "cazul",
+    "cazuri",
+    "ceea",
+    "circumstanțe",
+    "Citeste",
+    "clienti",
+    "clientilor",
+    "colaboram",
+    "colectăm",
+    "comenzi",
+    "comunici",
+    "Conditii",
+    "conditiile",
+    "Conditiile",
+    "conformitate",
+    "consimtamantului",
+    "contacta",
+    "contactăm",
+    "contactezi",
+    "continuare",
+    "Contul",
+    "corespondență",
+    "Creeaza",
+    "culturale",
+    "dacă",
+    "Dacă",
+    "datele",
+    "datelor",
+    "decât",
+    "denumite",
+    "depui",
+    "descrise",
+    "desfasurare",
+    "desfășurate",
+    "despre",
+    "detaliile",
+    "determina",
+    "Dispozitiv",
+    "divulga",
+    "doar",
+    "dorești",
+    "dorim",
+    "drepturile",
+    "dumneavoastra",
+    "economice",
+    "elemente",
+    "emailuri",
+    "entitati",
+    "esentiala",
+    "ești",
+    "evenimente",
+    "evenimentele",
+    "exceptia",
+    "exista",
+    "experiență",
+    "expres",
+    "facem",
+    "fără",
+    "feluri",
+    "fiind",
+    "fizică",
+    "fizice",
+    "fiziologice",
+    "folose",
+    "foloseste",
+    "folosesti",
+    "folosi",
+    "folosim",
+    "Folosim",
+    "fost",
+    "funcție",
+    "furnizarea",
+    "furnizat",
+    "furnizeaza",
+    "Galați",
+    "gasesti",
+    "genetice",
+    "identificabilă",
+    "identificare",
+    "identificată",
+    "identificator",
+    "identității",
+    "increderea",
+    "informa",
+    "informăm",
+    "informare",
+    "informări",
+    "informarii",
+    "informații",
+    "informațiile",
+    "înregistrate",
+    "înregistrezi",
+    "înscrii",
+    "înseamnă",
+    "înțelege",
+    "înțelegi",
+    "intermediul",
+    "invita",
+    "Irina",
+    "lecturezi",
+    "legala",
+    "legătură",
+    "localizare",
+    "locurile",
+    "Luana",
+    "luanastoica",
+    "materiale",
+    "mele",
+    "modificarile",
+    "multe",
+    "natura",
+    "necesare",
+    "nevoie",
+    "niciodată",
+    "noastre",
+    "noile",
+    "nostru",
+    "Notar",
+    "noutăți",
+    "număr",
+    "Numarul",
+    "Nume",
+    "numele",
+    "obligatia",
+    "obligatie",
+    "oferi",
+    "Oferim",
+    "oferte",
+    "ofertele",
+    "operăm",
+    "Operatorul",
+    "organiza",
+    "oricăror",
+    "orice",
+    "parola",
+    "partenerilor",
+    "participa",
+    "participi",
+    "pentru",
+    "Pentru",
+    "permite",
+    "persoana",
+    "persoană",
+    "persoane",
+    "persoanele",
+    "personale",
+    "personaliza",
+    "personalizată",
+    "platformele",
+    "poate",
+    "Politica",
+    "Politică",
+    "Politici",
+    "posibil",
+    "posibilitatea",
+    "potentialilor",
+    "prealabil",
+    "prelucrarea",
+    "prelucrării",
+    "prelucrate",
+    "Prenume",
+    "Prenumele",
+    "prevederile",
+    "prezenta",
+    "prezentare",
+    "prezentei",
+    "primești",
+    "primi",
+    "prin",
+    "Prin",
+    "prioritate",
+    "privește",
+    "privind",
+    "privire",
+    "proceda",
+    "proces",
+    "programul",
+    "proiecte",
+    "proiectele",
+    "proiectelor",
+    "promitem",
+    "promoționale",
+    "promovăm",
+    "proprii",
+    "Protectia",
+    "protecție",
+    "psihice",
+    "publicate",
+    "putea",
+    "putem",
+    "referire",
+    "reguli",
+    "Rezerva",
+    "Rezervarile",
+    "rugăm",
+    "schimbarile",
+    "Scopul",
+    "scopuri",
+    "scopurile",
+    "Secțiunea",
+    "servicii",
+    "serviciile",
+    "Signup",
+    "siguranța",
+    "situatiilor",
+    "sociale",
+    "soluțiile",
+    "specifice",
+    "stocate",
+    "Stoica",
+    "Sunt",
+    "Telefon",
+    "Termeni",
+    "termenii",
+    "Termenii",
+    "terte",
+    "terti",
+    "Țiglina",
+    "toate",
+    "transmise",
+    "tratate",
+    "trimite",
+    "uitat",
+    "ultim",
+    "ului",
+    "unicul",
+    "unul",
+    "urile",
+    "urilor",
+    "urmare",
+    "următoarea",
+    "usor",
+    "utilizare",
+    "utilizarea",
+    "vandut",
+    "vedere",
+    "viitor",
+    "vinde",
+    "vindem",
+    "vizată",
+    "vizitator",
+    "Zatun"
+  ]
 }
