--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-google-oauth2": "0.2.0",
     "passport-google-oauth20": "2.0.0",
     "postcss": "8.x",
+    "qr-scanner": "1.4.1",
     "qrcode.react": "3.0.1",
     "react": "18.0.0",
     "react-burger-menu": "3.0.6",
@@ -55,6 +56,7 @@
     "react-hook-form": "7.32.1",
     "react-hot-toast": "2.2.0",
     "react-pro-sidebar": "0.7.1",
+    "react-qr-reader": "3.0.0-beta-1",
     "react-select": "5.3.2",
     "recharts": "2.1.9",
     "stripe": "9.4.0",
