--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@stripe/stripe-js": "1.29.0",
     "@uiball/loaders": "1.2.6",
     "autoprefixer": "10.x",
+    "axios": "1.3.4",
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
