--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "recharts": "2.1.9",
     "stripe": "9.4.0",
     "tailwindcss": "3.x",
+    "uuid": "9.0.0",
     "vercel": "24.2.4",
     "zod": "3.14.4"
   },
