--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@stripe/react-stripe-js": "1.7.2",
     "@stripe/stripe-js": "1.29.0",
     "@uiball/loaders": "1.2.6",
+    "@vercel/analytics": "1.0.1",
     "autoprefixer": "10.x",
     "axios": "1.3.4",
     "blitz": "0.45.4",
