--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vercel/analytics": "1.0.1",
     "autoprefixer": "10.x",
     "axios": "1.3.4",
+    "axios-retry": "3.5.1",
     "blitz": "0.45.4",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
