added date interval functionality to Analiza Rezervari

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:Tryndamere321@db.jeqiowpgxrqkbcrnecew.supabase.co:5432/postgres"
+DATABASE_URL="postgres://postgres.jeqiowpgxrqkbcrnecew:Tryndamere321@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
 BASE_URL="http%3A%2F%2Flocalhost:3000"
 BT_URL="https://ecclients.btrl.ro:5443"
 BT_USERNAME="test_iPay3_api"
