--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "1.3.4",
     "axios-retry": "3.5.1",
     "blitz": "0.45.4",
+    "resend": "1.0.0",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
     "framer-motion": "6.3.4",
