--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ BASE_URL="http%3A%2F%2Flocalhost:3000"
 BT_URL="https://ecclients.btrl.ro:5443"
 BT_USERNAME="test_iPay3_api"
 BT_PASSWORD="test_iPay3_ap!e4r"
+RESEND_KEY="re_e5yL67wR_9mcdqQ6JnfqUbwSA1mKVfh6o"
