--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "axios": "1.3.4",
     "axios-retry": "3.5.1",
     "blitz": "0.45.4",
-    "resend": "1.0.0",
     "date-fns": "2.28.0",
     "final-form": "4.20.7",
     "framer-motion": "6.3.4",
@@ -68,7 +67,9 @@
     "react-qr-reader": "3.0.0-beta-1",
     "react-select": "5.3.2",
     "recharts": "2.1.9",
+    "resend": "1.0.0",
     "stripe": "9.4.0",
+    "supabase": "1.172.2",
     "tailwindcss": "3.x",
     "universal-cookie": "4.0.4",
     "uuid": "9.0.0",
